--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "jest": "^29.4.3"
+    "http-errors": "^2.0.0",
+    "jest": "^29.4.3",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
