--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "jest": "^29.4.3",
