--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "tonal": "^4.14.0",
     "tone": "^14.7.77",
     "web-vitals": "^2.1.4"
   },
